[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Ocean/Ocean Enemies/Enemy_Pufferfish.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.0
height = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 235.172

[node name="Enemy_Pufferfish" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
modulate = Color( 0.85098, 1, 0, 1 )
texture = ExtResource( 1 )

[node name="PuffTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="timeout" from="PuffTimer" to="." method="_on_PuffTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
